--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,8 @@
 
 <div class="wrap content">
 
-  <!-- <p>about-us works!</p> -->
+  <p class="head">About</p>
+
+  <p class="body">.</p>
   
 </div>
