--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -5,13 +5,19 @@
     <p class="head">Trending Anime</p>
   </div>
 
+  <div class="wrap content" *ngIf="!(trendingAnime | async)">
+    <div class="no-content" *ngFor="let i of [0,0,0,0,0,0,0,0,0,0]">
+      <mat-card></mat-card>
+    </div>
+  </div>
+
   <div class="wrap content">
     <div matRipple *ngFor="let anime of (trendingAnime | async)" #card [tilt]="card" [cardDetails]="anime" (click)="selectAnime(anime)">
       <mat-card>
         <img 
           mat-card-image 
-          [defaultImage]="'assets/images/no-image.png'" 
-          [errorImage]="'assets/images/no-image.png'" 
+          [defaultImage]="'assets/images/no-image-grey.png'" 
+          [errorImage]="'assets/images/no-image-grey.png'" 
           [lazyLoad]="anime?.posterImage?.small" 
           [alt]="anime?.slug">
       </mat-card>
@@ -27,12 +33,12 @@
   </div>
 
   <div class="wrap content">
-    <div matRipple *ngFor="let manga of (trendingManga | async)" #card [tilt]="card" [cardDetails]="manga" (click)="selectAnime(manga)">
+    <div matRipple *ngFor="let manga of (trendingManga | async)" #card [tilt]="card" [cardDetails]="manga" (click)="selectAnime(manga, 'manga')">
       <mat-card>
         <img 
           mat-card-image 
-          [defaultImage]="'assets/images/no-image.png'" 
-          [errorImage]="'assets/images/no-image.png'" 
+          [defaultImage]="'assets/images/no-image-grey.png'" 
+          [errorImage]="'assets/images/no-image-grey.png'" 
           [lazyLoad]="manga?.posterImage?.small" 
           [alt]="manga?.slug">
       </mat-card>
@@ -52,8 +58,8 @@
       <mat-card>
         <img 
           mat-card-image 
-          [defaultImage]="'assets/images/no-image.png'" 
-          [errorImage]="'assets/images/no-image.png'" 
+          [defaultImage]="'assets/images/no-image-grey.png'" 
+          [errorImage]="'assets/images/no-image-grey.png'" 
           [lazyLoad]="anime?.posterImage?.small" 
           [alt]="anime?.slug">
       </mat-card>
