--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,23 @@
 
 <div class="wrap content">
   
-  <!-- <p>contact-us works!</p> -->
+  <p>Contact Us</p>
+
+  <div>
+    <mat-form-field color="accent" appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" autocomplete="off" [(ngModel)]="email" #_email="ngModel">
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field color="accent" appearance="outline">
+      <mat-label>Message</mat-label>
+      <textarea matInput type="text" rows="20" maxlength="900" [(ngModel)]="message" #_message="ngModel"></textarea>
+      <mat-hint *ngIf="message.length > 0" align="end">{{ message.length }}/900</mat-hint>
+    </mat-form-field>
+  </div>
+  
+  <button mat-raised-button (click)="submit()">Submit</button>
 
 </div>
