--- a/src/app/select/select.component.scss
+++ b/src/app/select/select.component.scss
@@ -1,4 +1,22 @@
 
+// global
+
+.no-content {
+  margin: 10px 0;
+  
+  .mat-card {
+    width: 200px;
+    height: 283.09px;
+  }
+} 
+
+.mat-card-image {
+  border: 1px solid white;
+}
+
+
+// styles
+
 .overlay-content {
   display: flex;
   background-color: rgba(black, 0.5);
