--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -71,7 +71,8 @@
   }
 
   .primary-chip {
-    background-color: #E91E63;
+    // background-color: #E91E63;
+    background-color: #FFAF02;
   }
 }
 
