--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -1,14 +1,35 @@
 
+<div class="featured">
+  
+  <div class="wrap heading">
+    <p class="head">Featured</p>
+  </div>
+
+  <div class="wrap content" *ngIf="!(media | async)">
+    <div class="no-content" *ngFor="let i of [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]">
+      <mat-card></mat-card>
+    </div>
+  </div>
+
+  <div class="wrap content">
+    <div matRipple *ngFor="let anime of (media | async)" #card [tilt]="card" [cardDetails]="anime" (click)="selectAnime(anime)">
+      <mat-card>
+        <img 
+          mat-card-image 
+          [defaultImage]="'assets/images/no-image-grey.png'" 
+          [errorImage]="'assets/images/no-image-grey.png'" 
+          [lazyLoad]="anime?.posterImage?.small" 
+          [alt]="anime?.slug">
+      </mat-card>
+    </div>
+  </div>
+
+</div>
+
 <div class="trending anime">
   
   <div class="wrap heading">
     <p class="head">Trending Anime</p>
-  </div>
-
-  <div class="wrap content" *ngIf="!(trendingAnime | async)">
-    <div class="no-content" *ngFor="let i of [0,0,0,0,0,0,0,0,0,0]">
-      <mat-card></mat-card>
-    </div>
   </div>
 
   <div class="wrap content">
@@ -41,27 +62,6 @@
           [errorImage]="'assets/images/no-image-grey.png'" 
           [lazyLoad]="manga?.posterImage?.small" 
           [alt]="manga?.slug">
-      </mat-card>
-    </div>
-  </div>
-
-</div>
-
-<div class="featured">
-  
-  <div class="wrap heading">
-    <p class="head">Featured</p>
-  </div>
-
-  <div class="wrap content">
-    <div matRipple *ngFor="let anime of (media | async)" #card [tilt]="card" [cardDetails]="anime" (click)="selectAnime(anime)">
-      <mat-card>
-        <img 
-          mat-card-image 
-          [defaultImage]="'assets/images/no-image-grey.png'" 
-          [errorImage]="'assets/images/no-image-grey.png'" 
-          [lazyLoad]="anime?.posterImage?.small" 
-          [alt]="anime?.slug">
       </mat-card>
     </div>
   </div>
